// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SuccessPage component Authorisation approved should render a success screen with link to book an appointment 1`] = `
<DocumentFragment>
  <section
    class="text-align-left lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Authorisation request approved
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012/appointment/new"
      >
        Book an appointment on DRS
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Manage work orders
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Authorisation rejected should render a success screen with link to raise a new wo 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <h1
      class="govuk-panel__title govuk-!-margin-bottom-1"
    >
      Work order cancelled, authorisation request rejected 
    </h1>
    <div
      class="govuk-panel__body govuk-!-margin-top-0"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/properties/undefined/raise-repair/new"
      >
        Raise a new work order for 16 Pitcairn House  St Thomass Square
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Start a new search
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair High cost (over raise limit) authorisation should render a success screen with a warning message 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <h1
      class="govuk-panel__title govuk-!-margin-bottom-1"
    >
      Work order created but requires authorisation 
    </h1>
    <div
      class="govuk-panel__body govuk-!-margin-top-0"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </div>
  <div
    class="govuk-warning-text lbh-warning-text"
  >
    <span
      aria-hidden="true"
      class="govuk-warning-text__icon"
    >
      !
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-warning-text__assistive"
      >
        Warning
      </span>
      Please request authorisation from a manager
    </strong>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        Back to 16 Pitcairn House
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Start a new search
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair creates Emergency/Immediate DLO WO should render a success page with an Emergency/Immediate DLO warning text 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <h1
      class="govuk-panel__title govuk-!-margin-bottom-1"
    >
      Work order created 
    </h1>
    <div
      class="govuk-panel__body govuk-!-margin-top-0"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </div>
  <div
    class="govuk-warning-text lbh-warning-text"
  >
    <span
      aria-hidden="true"
      class="govuk-warning-text__icon"
    >
      !
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-warning-text__assistive"
      >
        Warning
      </span>
      Emergency and immediate DLO repairs are sent directly to the planners. An appointment does not need to be booked
    </strong>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        Back to 16 Pitcairn House
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Start a new search
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair creates Emergency/Immediate WO for external contractor should render a success page with an Emergency/Immediate warning text 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <h1
      class="govuk-panel__title govuk-!-margin-bottom-1"
    >
      Work order created 
    </h1>
    <div
      class="govuk-panel__body govuk-!-margin-top-0"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </div>
  <div
    class="govuk-warning-text lbh-warning-text"
  >
    <span
      aria-hidden="true"
      class="govuk-warning-text__icon"
    >
      !
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-warning-text__assistive"
      >
        Warning
      </span>
      Emergency and immediate repairs must be booked immediately. Please call the external contractor
    </strong>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        Back to 16 Pitcairn House
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Start a new search
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair creates WO with RH appointment should render success message with appointment date and related links 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <h1
      class="govuk-panel__title govuk-!-margin-bottom-1"
    >
      Work order created 
    </h1>
    <div
      class="govuk-panel__body govuk-!-margin-top-0"
    >
      <p>
        Reference number 10000012
      </p>
      <p>
        Thursday, 11 March AM
      </p>
      <p
        class="govuk-!-margin-top-1"
      >
        Comments: 10 am works for me
      </p>
    </div>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        Back to 16 Pitcairn House
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Start a new search
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair creates WO with an external scheduler URL should render text with a link to schedule externally 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <h1
      class="govuk-panel__title govuk-!-margin-bottom-1"
    >
      Work order created 
    </h1>
    <div
      class="govuk-panel__body govuk-!-margin-top-0"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="https://drs.example.com"
        rel="noopener"
        target="_blank"
      >
        Book an appointment on DRS
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        Back to 16 Pitcairn House
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Start a new search
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Variation approved should render a success screen 1`] = `
<DocumentFragment>
  <section
    class="text-align-left lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Variation request approved
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Manage work orders
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Variation rejected should render a success screen with link to raise a new wo 1`] = `
<DocumentFragment>
  <section
    class="text-align-left lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Variation request rejected
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678/raise-repair/new"
      >
        Raise a new work order for 16 Pitcairn House  St Thomass Square
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Manage work orders
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Variation requires authorisation should render a success screen with warning text 1`] = `
<DocumentFragment>
  <section
    class="text-align-left lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Variation requires authorisation
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </section>
  <div
    class="govuk-warning-text lbh-warning-text"
  >
    <span
      aria-hidden="true"
      class="govuk-warning-text__icon"
    >
      !
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-warning-text__assistive"
      >
        Warning
      </span>
      Please request authorisation from a manager
    </strong>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Manage work orders
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component WO cancelled should render a success screen with a link to raise a new wo 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <h1
      class="govuk-panel__title govuk-!-margin-bottom-1"
    >
      Work order cancelled 
    </h1>
    <div
      class="govuk-panel__body govuk-!-margin-top-0"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/properties/undefined/raise-repair/new"
      >
        Raise a new work order for 16 Pitcairn House  St Thomass Square
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Start a new search
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component WO closed should render a success screen 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <h1
      class="govuk-panel__title govuk-!-margin-bottom-1"
    >
      Work order closed 
    </h1>
    <div
      class="govuk-panel__body govuk-!-margin-top-0"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Manage work orders
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component WO update should render a success screen 1`] = `
<DocumentFragment>
  <section
    class="text-align-left lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Work order updated
    </h3>
    <div
      class="lbh-page-announcement__content"
    >
      <p>
        Reference number 10000012
      </p>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        View work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012/close"
      >
        Close work order
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        Manage work orders
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
